--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# OSX
-#
+# macOS
 .DS_Store
 
 # Xcode
-#
 build/
 *.pbxuser
 !default.pbxuser
@@ -13,58 +11,55 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
+xcuserdata/
 *.xccheckout
 *.moved-aside
-DerivedData
+DerivedData/
 *.hmap
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
 
 # Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
-*.iml
+android/app/build/
+android/.gradle/
+android/.idea/
+android/local.properties
+android/*.iml
+android/.cxx/
+android/*.keystore
+!android/debug.keystore
+android/.kotlin/
 *.hprof
-.cxx/
-*.keystore
-!debug.keystore
-.kotlin/
 
-# node.js
-#
+# Node.js
 node_modules/
-npm-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+.pnpm-debug.log*
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
-
-# Bundle artifact
+# Metro
+.expo/
+.expo-shared/
+.metro-cache/
+.metro-health-check*
 *.jsbundle
 
+# Testing
+coverage/
+*.lcov
+
+# Fastlane
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots/
+**/fastlane/test_output/
+
 # Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
-
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
-
-# testing
-/coverage
+ios/Pods/
+vendor/bundle/
 
 # Yarn
 .yarn/*
@@ -73,3 +68,49 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Miscellaneous
+.env
+.env.*
+*.env.local
+*.log
+*.tmp
+*.swp
+*.swo
+*.bak
+
+# VSCode
+.vscode/
+.history/
+
+# Custom src/assets (ignore generated or temp files, but keep your source assets)
+src/assets/*.tmp
+src/assets/*.bak
+
+# React Native specific
+*.gradle
+*.apk
+*.ap_
+*.jks
+*.keystore
+*.so
+*.dex
+*.class
+*.jar
+
+# macOS system files
+Icon?
+._*
+
+# Optional: Ignore TypeScript artifacts if you ever add TS files
+*.tsbuildinfo
+
+# Optional: Ignore IDE-specific files
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Optional: Ignore build output from bundlers (if you ever use them)
+dist/
+build/
+out/
